[package]
name = "netflow-post-processor"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clokwerk = "0.4.0"
postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
postgres-inet = "0.19.0"
postgres-types = { version = "0.2.6", features = ["derive"] }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
